# FlowDoctor

./: AGENTS.md  README.md  failure_bundle.json  pyproject.toml  repo_profile.json
.devcontainer/: devcontainer.json
src/flowdoctor/: __init__.py  cli.py
tests/: test_diagnose.py  test_diagnose_fixtures.py  test_env.py  test_scan.py
